--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Microsoft Office</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -38,6 +39,25 @@
       </div>
     </nav>
   </header>
+  <div class="365-img"><img class="img-fluid img-365" src="img/RE3BTFp.jpg" alt="365 Logo">
+    <div class="container">
+      <div class="text_center-365">
+        <h1 class="title-principal">este es tu 365</h1>
+        <p class="text-title">cada dia tíenes una oportunidad nueca con office 365</p>
+        <butto class="btn btn-warning btn-war mt-4">para el hogar</butto>
+        <butto class="btn btn-warning btn-war mt-3">para el empresas</butto>
+      </div>
+    </div>
+    <div class="text-info-365">
+      <div class="container">
+        <div class="text_info_hijo">
+          <h2 class="sub-title-principal">qué es office 365</h2>
+          <p class="text_info">Office 365 es un servicio de suscripción basado en la nube que reúne las mejores herramientas para la forma de trabajar de hoy en día. Al combinar las mejores aplicaciones de su categoría, como Excel y Outlook, con servicios de gran utilidad en la nube, como OneDrive y Microsoft Teams, Office 365 permite a los usuarios crear y compartir desde cualquier lugar y dispositivo.</p>
+        </div>
+      </div>
+      <div class="tex_info-img"></div><img class="img-fluid" src="img/RE49D7o.webp" alt="">
+    </div>
+  </div>
 </body>
 <script src="js/jquery-3.2.1.slim.min.js">
   <script src="js/popper.min.js"></script>
