--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <li class="nav-item"><a class="nav-link list_ul_link-" href="#">comprar office 365</a></li></a></li>
         <div class="collapse navbar-collapse links_top" id="forNavbar">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">todo microsoft</a>
+            <li class="nav-item dropdown d-ns"><a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">todo microsoft</a>
               <div class="dropdown-menu"><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a></div>
             </li>
-            <li class="nav-link"><a class="dropdown-item list-icon" href="#"><i class="fas fa-search"></i></a></li>
-            <li class="nav-link"><a class="dropdown-item list_icon" href="#"><i class="fas fa-user-circle"></i></a></li>
+            <li class="nav-link"><a class="dropdown-item list-icon d-ns" href="#"><i class="fas fa-search"></i></a></li>
+            <li class="nav-link"><a class="dropdown-item list_icon usser" href="#"><i class="fas fa-user-circle"></i></a></li>
           </ul>
         </div>
       </div>
@@ -44,19 +44,44 @@
       <div class="text_center-365">
         <h1 class="title-principal">este es tu 365</h1>
         <p class="text-title">cada dia tíenes una oportunidad nueca con office 365</p>
-        <butto class="btn btn-warning btn-war mt-4">para el hogar</butto>
-        <butto class="btn btn-warning btn-war mt-3">para el empresas</butto>
+        <button class="btn btn-warning btn-war mt-4">para el hogar</button>
+        <button class="btn btn-warning btn-war mt-3 btn-plus">para el empresas</button>
       </div>
     </div>
-    <div class="text-info-365">
+    <section class="text-info-365">
       <div class="container">
         <div class="text_info_hijo">
           <h2 class="sub-title-principal">qué es office 365</h2>
-          <p class="text_info">Office 365 es un servicio de suscripción basado en la nube que reúne las mejores herramientas para la forma de trabajar de hoy en día. Al combinar las mejores aplicaciones de su categoría, como Excel y Outlook, con servicios de gran utilidad en la nube, como OneDrive y Microsoft Teams, Office 365 permite a los usuarios crear y compartir desde cualquier lugar y dispositivo.</p>
+          <p class="text_info_1">Office 365 es un servicio de suscripción basado en la nube que reúne las mejores herramientas para la forma de trabajar de hoy en día. Al combinar las mejores aplicaciones de su categoría, como Excel y Outlook, con servicios de gran utilidad en la nube, como OneDrive y Microsoft Teams, Office 365 permite a los usuarios crear y compartir desde cualquier lugar y dispositivo.</p>
         </div>
       </div>
-      <div class="tex_info-img"></div><img class="img-fluid" src="img/RE49D7o.webp" alt="">
-    </div>
+      <div class="tex_info-img"></div><img class="img-fluid img_tablet" src="img/RE49D7o.webp" alt="">
+    </section>
+    <section class="text_info">
+      <div class="container">
+        <div class="text_info-hijo">
+          <h3 class="title_info">más informacion sobre office 365</h3>
+          <div class="c-info_icon col-md-3"><img src="img/RE3hsE5.png" alt="Icon Representing a Small Bussines">
+            <p class="text_icon">hogar</p><a class="link" href="#">más información ➣</a>
+          </div>
+        </div>
+        <div class="text_info-">
+          <div class="c-info_icon col-md-3"><img src="img/RE3hxRH.webp" alt="Icon Representing a Small Bussines">
+            <p class="text_icon">pequeñas empresas</p><a class="link" href="#">más información ➣</a>
+          </div>
+        </div>
+        <div class="text_info-">
+          <div class="c-info_icon col-md-3"><img src="img/RE3hSFA.png" alt="Icon Representing a Small Bussines">
+            <p class="text_icon">grandes empresas</p><a class="link" href="#">más información ➣</a>
+          </div>
+        </div>
+        <div class="text_info- mb-5">
+          <div class="c-info_icon col-md-3"><img src="img/RE3hKSi.png" alt="Icon Representing a Small Bussines">
+            <p class="text_icon">ámbito educativo</p><a class="link" href="#">más información ➣</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </body>
 <script src="js/jquery-3.2.1.slim.min.js">
